# Commander

./: .gitignore  ClientTask.txt  KillScripts.bat  MapEditor.bat  MultiTest.py  QuickClean.bat  QuickRun.bat  QuickRun.sh  QuickRunEditor.bat  QuickRunReplayer.bat  QuickRun_2Player.bat  QuickRun_3Player.bat  QuickRun_4Player.bat  RunMapEditor.bat  ServerTask.txt  autoEvaluation.py  autoMatch.py  autoMatch_CrossFolder.py  collectResult.py  compressFiles.bat  match.py  sock.lua  tempCodeRunnerFile.py
AutoMatch/: MultiTest.py  autoEvaluation.py  autoMatch.py  autoMatch_CrossFolder.py
Client/: ClientSock.lua  GameOver.lua  Init.lua  Switcher.lua  conf.lua  main.lua  nohup.out  test.lua
Client/AI/: Commander.cp36-win_amd64.pyd  Commander.pyi  Core.lua  Core.py  CoreSample.py  Core_Example.lua  UserImplementationType.txt
Client/AI/AI_SDK/: AI_SDK.lua
Client/GameOver/: GameOver.lua
Client/Menu/: Menu.lua
Client/PlayGame/: Core.lua  Operation.lua  PlayGame.lua
Client/PlayGame/Select/: Select.lua
Client/Replayer/: ReplayGame.lua
Client/System/: BasicMap.lua  MapAdjust.lua  Picture.lua
Client/Welcome/: BGAnimation.lua  Welcome.lua
Cryptogram/: readme.md
Cryptogram/scripts/: main.lua
Cryptogram/sources/: CMakeLists.txt  build.bat
Cryptogram/sources/operators/: api.cpp  encrypt.cpp  encrypt.hpp
DDL_God_of_War/round0/: 0.map
Data/: 3Player.map  4Player.map  default.map  决赛4player.map
Generator/: blankMap.py  main.lua
MapEditor/: EditorSock.lua  README.md  conf.lua  guide.txt  main.lua
MapEditor/PlayGame/: Operation.lua  PlayGame.lua
Output/: map.map
QuickRun/: QuickRun.cpp
Replayer/: conf.lua  main.lua
Replayer/PlayGame/: PlayGame.lua
Server/: Init.lua  MyColor.lua  ServerSock.lua  conf.lua  main.lua  test.lua
Server/PlayGame/: Core.lua  Judgement.lua  PlayGame.lua
Server/System/: BasicMap.lua  MapAdjust.lua  Picture.lua  Timer.lua  lua_love2d.code-workspace
System/: BasicMap.lua  Buttons.lua  Color.lua  Coordinate.lua  Debug.lua  MapAdjust.lua  Picture.lua
TestData/: map.map
Welcome/: Welcome.lua
source/GameMap/: API.cpp  GameMap.cpp  Implementation.cpp  MapFormat.cpp
source/Verify/: API.cpp  Implementation.cpp
source/include/: Constant.hpp  GameMap.hpp  LuaAPI.hpp
source/include/detail/: LuaAPI.hpp  Tools.hpp
spec/: sock_spec.lua
src_cpp/: CMakeLists.txt  build.bat  build.sh  clean.bat  clean.sh
src_cpp/CLib/: API.cpp
src_cpp/GameMap/: API.cpp  GameMap.cpp  Implementation.cpp  MapFormat.cpp
src_cpp/PythonSDK/: API.cpp  PyAPI.cpp
src_cpp/System/: API.cpp
src_cpp/Tools/: Tools.cpp
src_cpp/UserAPI/: API.cpp  UserAPI.cpp  UserAPI.hpp
src_cpp/UserImplementation/: API.cpp  userMain.cpp
src_cpp/Verification/: API.cpp  Implementation.cpp
src_cpp/Verify/: API.cpp  Implementation.cpp  Verify.cpp
src_cpp/include/: Constant.hpp  Debug.hpp  GameMap.h  GameMap.hpp  LuaAPI.hpp  System.h  System.hpp  Tools.h  Tools.hpp  UserAPI.hpp  Verification.hpp  Verify.h  Verify.hpp  luaapi.h
src_cpp/include/detail/: LuaAPI.hpp  Tools.hpp
